<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transactions"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/transactions" />
        <item
            android:id="@+id/nav_top_up"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/top_up" />

    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/manage_account" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
